--- a/src/components/current-weather/current-weather.css
+++ b/src/components/current-weather/current-weather.css
@@ -54,6 +54,13 @@
   margin: 10px
 }
 
+.temp-min-max {
+  width: auto;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+}
+
 .details {
   width: 100%;
   padding-left: 20px;
