--- a/src/styles/components/_app.scss
+++ b/src/styles/components/_app.scss
@@ -2,3 +2,17 @@
   max-width: 1080px;
   margin: 20px auto;
 }
+
+.attribution { 
+  font-size: 13px;
+  text-align: center;
+  margin-bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  bottom: 0;
+
+  a { 
+    color: hsl(229, 90%, 51%); 
+  }
+}
